# Group29_outlierdealer

./: CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/outliers/: __init__.py  outliers.py  trim_outliers.py  visualize_outliers.py
src/py_outlier_utils/: __init__.py  trim_outliers.py
tests/: test_outliers.py  test_trim_outliers.py  test_visualize_outliers.py
